--- a/e-commerce-advanced/.github/workflows/container.yml
+++ b/e-commerce-advanced/.github/workflows/container.yml
@@ -2,10 +2,11 @@ name: deploy-container
 
 on:
   push:
-    branches:
-      - main
-    paths:
-      - "packages/container/**"
+    branches: [main]
+    paths: ["packages/container/**"]
+
+    # Allows you to run this workflow manually from the Actions tab
+    workflow_dispatch:
 
 defaults:
   run:
