Add invalidation step to CI build

--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -27,6 +27,11 @@ jobs:
       - uses: chrislennon/action-aws-cli@v1.1
       # synchronise the distribution directory (dist) created by "npm run build" with an S3 bucket
       - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/latest
-        env:
+        env: # these are the credentials necessary to run the command above
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+      - run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUTION_ID }} --paths "/container/latest/index.html"
+        env: # these are the credentials necessary to run the command above
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
