--- a/.github/workflows/marketing.yml
+++ b/.github/workflows/marketing.yml
@@ -1,17 +1,17 @@
-name: deploy-container
+name: deploy-marketing
 
 on:
   push:
     branches:
       - main
     paths:
-      - "e-commerce-advanced/packages/container/**"
+      - "e-commerce-advanced/packages/marketing/**"
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 defaults:
   run:
-    working-directory: e-commerce-advanced/packages/container
+    working-directory: e-commerce-advanced/packages/marketing
 
 jobs:
   build:
@@ -21,19 +21,17 @@ jobs:
       - uses: actions/checkout@v2
       - run: npm install
       - run: npm run build
-        env: # exposes environment variables to the command above
-          PRODUCTION_DOMAIN: ${{ secrets.PRODUCTION_DOMAIN }}
 
       - name: ACTIONS_ALLOW_UNSECURE_COMMANDS
         run: echo 'ACTIONS_ALLOW_UNSECURE_COMMANDS=true' >> $GITHUB_ENV
       - uses: chrislennon/action-aws-cli@v1.1
       # synchronise the distribution directory (dist) created by "npm run build" with an S3 bucket
-      - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/latest
+      - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/marketing/latest
         env: # exposes environment variables to the command above
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }} # these are the credentials necessary to run the command above
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }} # these are the credentials necessary to run the command above
 
-      - run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUTION_ID }} --paths "/container/latest/index.html"
+      - run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUTION_ID }} --paths "/marketing/latest/remoteEntry.js"
         env: # exposes environment variables to the command above
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }} # these are the credentials necessary to run the command above
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }} # these are the credentials necessary to run the command above
