--- a/e-commerce-advanced/packages/dashboard/package.json
+++ b/e-commerce-advanced/packages/dashboard/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "An app handling dashboard part of the frontend.",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack serve --config config/webpack.dev.js",
+    "build": "webpack --config config/webpack.prod.js"
   },
   "keywords": [
     "microfrontend",
